Repositioned day-4, -5, -6 event details to avoid z-index inconsistency with sidebar/tasklist

--- a/public/stylesheets/event-details.css
+++ b/public/stylesheets/event-details.css
@@ -15,15 +15,22 @@ li.event .event-details {
   top: -3px;
   border-style: solid;
   border-width: 4px 4px 4px 1px;
-  border-color: #999 #999 #999 #FFF;
+  border-color: #999;
   background: #FFF;
   width: 150%;
-  margin-left: 2px;
   padding: 20px;
 }
-  .week li.deadline .event-details { border-color: #E6E6E6 #B32914 #B32914 #E6E6E6; }
-  .week li.appointment .event-details { border-color: #E6E6E6 #114499 #114499 #E6E6E6; }
-  .week li.allday .event-details { border-color: #E6E6E6 #72D472 #72D472 #E6E6E6; }
+  .week li.deadline .event-details { border-color: #B32914; }
+  .week li.appointment .event-details { border-color: #114499; }
+  .week li.allday .event-details { border-color: #72D472; }
+
+  .week .day-4 li.event .event-details,
+  .week .day-5 li.event .event-details,
+  .week .day-6 li.event .event-details {
+    left: auto; 
+    right: 100%; 
+    border-width: 4px 1px 4px 4px;
+  }
 
   .day li.event.appointment .event-details,
   .day li.event.deadline .event-details {
